--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,1 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
-mix.js('resources/js/app.js', 'public/js')
-    .postCss('resources/css/app.css', 'public/css', [
-        //
-    ]);
+@import '~bootstrap/dist/css/bootstrap.min.css';
